--- a/config/crd/bases/compute.cloud.com_ec2instances.yaml
+++ b/config/crd/bases/compute.cloud.com_ec2instances.yaml
@@ -39,6 +39,18 @@ spec:
           spec:
             description: spec defines the desired state of Ec2Instance
             properties:
+              additionalStorage:
+                items:
+                  properties:
+                    volumeSize:
+                      type: integer
+                    volumeType:
+                      type: string
+                  required:
+                  - volumeSize
+                  - volumeType
+                  type: object
+                type: array
               amiID:
                 type: string
               instanceType:
@@ -46,7 +58,25 @@ spec:
               sshkey:
                 type: string
               storage:
+                properties:
+                  volumeSize:
+                    type: integer
+                  volumeType:
+                    type: string
+                required:
+                - volumeSize
+                - volumeType
+                type: object
+              subnet:
                 type: string
+              tags:
+                additionalProperties:
+                  type: string
+                type: object
+            required:
+            - storage
+            - subnet
+            - tags
             type: object
           status:
             description: status defines the observed state of Ec2Instance
