--- a/config/crd/bases/compute.cloud.com_ec2instances.yaml
+++ b/config/crd/bases/compute.cloud.com_ec2instances.yaml
@@ -39,33 +39,60 @@ spec:
           spec:
             description: spec defines the desired state of Ec2Instance
             properties:
-              additionalStorage:
-                items:
-                  properties:
-                    volumeSize:
-                      type: integer
-                    volumeType:
-                      type: string
-                  required:
-                  - volumeSize
-                  - volumeType
-                  type: object
-                type: array
-              amiID:
+              amiId:
+                type: string
+              associatePublicIP:
+                type: boolean
+              availabilityZone:
                 type: string
               instanceType:
                 type: string
-              sshkey:
+              keyPair:
                 type: string
+              region:
+                type: string
+              securityGroups:
+                items:
+                  type: string
+                type: array
               storage:
+                description: StorageConfig defines the storage configuration for the
+                  EC2 instance.
                 properties:
-                  volumeSize:
-                    type: integer
-                  volumeType:
-                    type: string
+                  additionalVolumes:
+                    items:
+                      description: VolumeConfig defines the configuration for a volume.
+                      properties:
+                        deviceName:
+                          type: string
+                        encrypted:
+                          type: boolean
+                        size:
+                          format: int32
+                          type: integer
+                        type:
+                          type: string
+                      required:
+                      - size
+                      type: object
+                    type: array
+                  rootVolume:
+                    description: VolumeConfig defines the configuration for a volume.
+                    properties:
+                      deviceName:
+                        type: string
+                      encrypted:
+                        type: boolean
+                      size:
+                        format: int32
+                        type: integer
+                      type:
+                        type: string
+                    required:
+                    - size
+                    type: object
                 required:
-                - volumeSize
-                - volumeType
+                - rootVolume
                 type: object
               subnet:
                 type: string
@@ -73,19 +100,33 @@ spec:
                 additionalProperties:
                   type: string
                 type: object
+              userData:
+                type: string
             required:
-            - storage
-            - subnet
-            - tags
+            - amiId
+            - instanceType
+            - region
             type: object
           status:
             description: status defines the observed state of Ec2Instance
             properties:
-              instanceID:
+              instanceId:
+                description: |-
+                  INSERT ADDITIONAL STATUS FIELD - define observed state of cluster
+                  Important: Run "make" to regenerate code after modifying this file
                 type: string
-              phase:
+              launchTime:
+                format: date-time
+                type: string
+              privateDNS:
+                type: string
+              privateIP:
+                type: string
+              publicDNS:
                 type: string
               publicIP:
+                type: string
+              state:
                 type: string
             type: object
         required:
