--- a/config/crd/bases/compute.cloud.com_ec2instances.yaml
+++ b/config/crd/bases/compute.cloud.com_ec2instances.yaml
@@ -14,10 +14,27 @@ spec:
     singular: ec2instance
   scope: Namespaced
   versions:
-  - name: v1
+  - additionalPrinterColumns:
+    - description: The EC2 instance type
+      jsonPath: .spec.instanceType
+      name: InstanceType
+      type: string
+    - description: The current state of the EC2 instance
+      jsonPath: .status.state
+      name: State
+      type: string
+    - description: The public IP of the EC2 instance
+      jsonPath: .status.publicIP
+      name: PublicIP
+      type: string
+    - description: The AWS instance ID
+      jsonPath: .status.instanceId
+      name: InstanceID
+      type: string
+    name: v1
     schema:
       openAPIV3Schema:
-        description: Ec2Instance is the Schema for the ec2instances API
+        description: Ec2Instance is the Schema for the ec2instances API.
         properties:
           apiVersion:
             description: |-
